improve styles for an article

--- a/lib/sbaudray_web/templates/blog/show.html.eex
+++ b/lib/sbaudray_web/templates/blog/show.html.eex
@@ -1,7 +1,7 @@
 <main class="main_container">
-  <article>
-    <h1 class="text-3xl text-teal-700 font-display"><%= @post.title %></h1>
+  <article class="lg:block flex flex-col items-center pb-16">
+    <h1 class="self-start text-3xl text-teal-700 font-display"><%= @post.title %></h1>
 
-    <div class="md:pl-20 mt-12 max-w-3xl"><%= raw(@post.body) %></div>
+    <div class="lg:ml-20 mt-12 max-w-3xl"><%= raw(@post.body) %></div>
   </article>
 </main>
