--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,10 +2,32 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+pre {
+  @apply rounded my-4 !important;
+}
+
+code.inline {
+  @apply rounded text-sm bg-gray-200 py-1 px-2;
+}
+
+p {
+  @apply font-serif text-lg;
+}
+
+p + p {
+  @apply mt-4;
+}
+
 a:hover {
-	@apply border-b border-teal-700
+  @apply border-b border-teal-700;
 }
 
 .main_container {
-	@apply max-w-6xl mx-auto p-4;
+  @apply mx-auto p-4;
+}
+
+@screen lg {
+  .main_container {
+    @apply max-w-6xl;
+  }
 }
