--- a/lib/sbaudray_web/templates/blog/show.html.eex
+++ b/lib/sbaudray_web/templates/blog/show.html.eex
@@ -1,5 +1,5 @@
 <main class="main_container">
-  <article class="lg:block flex flex-col items-center pb-16">
+  <article>
     <h1 class="self-start text-3xl text-teal-700 font-display"><%= @post.title %></h1>
 
     <div class="lg:ml-20 mt-12 max-w-3xl"><%= raw(@post.body) %></div>
