--- a/lib/sbaudray_web/templates/page/index.html.eex
+++ b/lib/sbaudray_web/templates/page/index.html.eex
@@ -1,5 +1,5 @@
 <main class="main_container">
-  <h1 class="font-display text-5xl">
+  <h1 class="font-display text-5xl lg:ml-16 xl:ml-0">
     Hi, i'm
     <span class="text-teal-700">S&eacute;bastien Baudray</span>
     <div class="font-sans text-2xl font-hairline mt-4">
@@ -7,7 +7,7 @@
     </div>
   </h1>
 
-  <div class="mt-16 ml-16">
+  <div class="mt-16 lg:ml-16">
     <section>
       <h2 class="tracking-widest">Blog</h2>
       <ul class="mt-4 pl-4">
