--- a/assets/css/prism.css
+++ b/assets/css/prism.css
@@ -1,16 +1,14 @@
-/* PrismJS 1.20.0
-https://prismjs.com/download.html#themes=prism-dark&languages=markup+css+clike+javascript+elixir+erlang+ocaml+jsx+tsx+reason+scss+typescript */
 /**
- * prism.js Dark theme for JavaScript, CSS and HTML
- * Based on the slides of the talk “/Reg(exp){2}lained/”
+ * prism.js default theme for JavaScript, CSS and HTML
+ * Based on dabblet (http://dabblet.com)
  * @author Lea Verou
  */
 
 code[class*="language-"],
 pre[class*="language-"] {
-  color: white;
+  color: black;
   background: none;
-  text-shadow: 0 -0.1em 0.2em black;
+  text-shadow: 0 1px white;
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
   font-size: 1em;
   text-align: left;
@@ -30,6 +28,22 @@ pre[class*="language-"] {
   hyphens: none;
 }
 
+pre[class*="language-"]::-moz-selection,
+pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection,
+code[class*="language-"] ::-moz-selection {
+  text-shadow: none;
+  background: #b3d4fc;
+}
+
+pre[class*="language-"]::selection,
+pre[class*="language-"] ::selection,
+code[class*="language-"]::selection,
+code[class*="language-"] ::selection {
+  text-shadow: none;
+  background: #b3d4fc;
+}
+
 @media print {
   code[class*="language-"],
   pre[class*="language-"] {
@@ -37,27 +51,22 @@ pre[class*="language-"] {
   }
 }
 
-pre[class*="language-"],
-:not(pre) > code[class*="language-"] {
-  background: hsl(30, 20%, 25%);
-}
-
 /* Code blocks */
 pre[class*="language-"] {
   padding: 1em;
   margin: 0.5em 0;
   overflow: auto;
-  border: 0.3em solid hsl(30, 20%, 40%);
-  border-radius: 0.5em;
-  box-shadow: 1px 1px 0.5em black inset;
+}
+
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  background: #f5f2f0;
 }
 
 /* Inline code */
 :not(pre) > code[class*="language-"] {
-  padding: 0.15em 0.2em 0.05em;
+  padding: 0.1em;
   border-radius: 0.3em;
-  border: 0.13em solid hsl(30, 20%, 40%);
-  box-shadow: 1px 1px 0.3em -0.1em black inset;
   white-space: normal;
 }
 
@@ -65,11 +74,11 @@ pre[class*="language-"] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-  color: hsl(30, 20%, 50%);
+  color: slategray;
 }
 
 .token.punctuation {
-  opacity: 0.7;
+  color: #999;
 }
 
 .token.namespace {
@@ -81,8 +90,9 @@ pre[class*="language-"] {
 .token.boolean,
 .token.number,
 .token.constant,
-.token.symbol {
-  color: hsl(350, 40%, 70%);
+.token.symbol,
+.token.deleted {
+  color: #905;
 }
 
 .token.selector,
@@ -91,26 +101,33 @@ pre[class*="language-"] {
 .token.char,
 .token.builtin,
 .token.inserted {
-  color: hsl(75, 70%, 60%);
+  color: #690;
 }
 
 .token.operator,
 .token.entity,
 .token.url,
 .language-css .token.string,
-.style .token.string,
-.token.variable {
-  color: hsl(40, 90%, 60%);
+.style .token.string {
+  color: #9a6e3a;
+  /* This background color was intended by the author of this theme. */
+  background: hsla(0, 0%, 100%, 0.5);
 }
 
 .token.atrule,
 .token.attr-value,
 .token.keyword {
-  color: hsl(350, 40%, 70%);
+  color: #07a;
+}
+
+.token.function,
+.token.class-name {
+  color: #dd4a68;
 }
 
 .token.regex,
-.token.important {
+.token.important,
+.token.variable {
   color: #e90;
 }
 
@@ -124,8 +141,4 @@ pre[class*="language-"] {
 
 .token.entity {
   cursor: help;
-}
-
-.token.deleted {
-  color: red;
 }
